# equity-valuation-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
config/: default_assumptions.yaml
src/valuation/: __init__.py  cli.py  config.py  pipeline.py
src/valuation/data/: __init__.py  base.py  fmp_provider.py  yfinance_provider.py
src/valuation/model/: __init__.py  assumptions.py  dcf.py  three_statement.py
src/valuation/reporting/: __init__.py  console.py  excel.py
tests/: conftest.py  test_config_pipeline.py  test_dcf.py  test_three_statement.py
