[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-valuation-model"
version = "1.0.0"
description = "Three-statement financial model and DCF valuation from a stock ticker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jake" }]
keywords = ["finance", "valuation", "dcf", "financial-modeling", "equity-research"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
equity-dcf = "valuation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
valuation = ["../../config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
